# fast-start

./: 404.html  README.md  build.yml  deploy-test.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt
airgapped/: index.html
airgapped/11-coreosisomaker/: index.html
airgapped/15-deployocpcluster/: index.html
airgapped/17-day2ops/: index.html
airgapped/18-configstoragenodes/: index.html
airgapped/2-infraservices/: index.html
airgapped/4-dnsserverentries/: index.html
airgapped/5-lbconfig/: index.html
airgapped/6-vpnconfig/: index.html
airgapped/7-guacamolevm/: index.html
airgapped/9-onlinebastion/: index.html
ama-app-mod/: index.html
ama-app-mod/ama-install/: index.html
assets/stylesheets/: base.css  grid_cards.css  table.css
blog/: index.html
cn/: index.html
cn-challenge/: index.html
cn/app-dev/: index.html
cn/cloud-native/: index.html
cn/containers/: index.html
cn/imageregistry/: index.html
cn/podman/: index.html
cn/reference/: index.html
concert/: index.html
concert/concert-comp-workflow/: index.html
concert/concert-ops-certs/: index.html
deploy/pre-production/: route.yaml  (+1 more)
devops/: index.html
docs/: agenda-5day.md  agenda.md  index.md  workstation-setup.md
ea/: index.html
integration/: index.html
ocp-on-ibm-cloud/: index.html
scripts/: __init__.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tools/: create-build-yaml.sh  create-deploymanifests.sh  install-detect-secrets.sh  install.bat  install.sh  update-poetrylock.sh
vault/: index.html
wca-app-dev-mod/: index.html
(+455 files in other folders)
